--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -95,7 +95,7 @@
                 <a class="nav-link" th:href="@{/admin/tutorpracticas/listar}">
                     <i class="bi bi-briefcase me-2"></i>Tutores Prácticas
                 </a>
-				<a class="nav-link" th:href="@{/admin/evaluacion/listar}">
+				<a class="nav-link" th:href="@{/admin/evaluaciones/listar}">
 				    <i class="bi bi-briefcase me-2"></i>Evaluaciones
 				</a>
 				<a class="nav-link" th:href="@{/evaluaciontutor/listar}">
@@ -156,10 +156,10 @@
                 <a class="nav-link" th:href="@{/alumno/evaluacion/listar}">
                     <i class="bi bi-clipboard-check me-2"></i>Evaluaciones
                 </a>
-                <a class="nav-link" th:href="@{/alumno/evaluacion/incidencia}">
+              <!--   <a class="nav-link" th:href="@{/alumno/evaluacion/incidencia}">
                     <i class="bi bi-exclamation-triangle me-2"></i>Incidencias
-                </a>
-                <a class="nav-link" th:href="@{/evaluaciontutor/listar}">
+                </a> -->
+                <a class="nav-link" th:href="@{/evaluaciontutor/nuevo}">
 				    <i class="bi bi-briefcase me-2"></i>Evaluaciones Tutor
 				</a>
             	</div>
